--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
         <meta charset="UTF-8">
         <style>
         body{
-            background-color: lightblue;
+            background-image: url(img/kirito.jpg);
         }
         .eu{
             border: 3px solid black;
             width: 150px;
             height: 200px;
+        }
+        h1{
+            color: aliceblue;
+        }
+        .texto{
+            color: lightblue;
         }
         </style>
     </head>
@@ -17,20 +23,25 @@
         <h1>Currículo</h1><!--titulo-->
             <img class="eu" src="img\eu.jpg"><!--foto-->
             <br>
-            <p>Nome: Alan Christian Amaral Santana</p>
-            <p>Data de nascimento: 27/09/2000</p>
-        <!--lista de associação-->
-        <dl>
-            <dt> Estudante de T.I.</dt> <!--Meu Cargo-->
-            <!--O que faço no cargo-->
-            <dd>Programador</dd>
-            <dd>Desenvolvedor</dd>
-        </dl>
+            <div class="texto">
+                    <p>Nome: Alan Christian Amaral Santana</p>
+                    <p>Data de nascimento: 27/09/2000</p>
+                <!--lista de associação-->
+                <dl>
+                    <dt> Estudante de T.I.</dt> <!--Meu Cargo-->
+                    <!--O que faço no cargo-->
+                    <dd>Programador</dd>
+                    <dd>Desenvolvedor</dd>
+                </dl>
                 <button><!--botoes-->
-                <a href="https://github.com/Nerd0000" target="_blank">Github</a>
+                    <a href="https://github.com/Nerd0000" target="_blank">Github</a>
                 </button>
                 <button>
                     <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
                 </button>
+                <button>
+                    <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&sort=likes&view_mode=default" target="_blank">Tinkercad</a>
+                </button>
+        </div>
     </body>
 </html>
