--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                     <dd>Programador</dd>
                     <dd>Desenvolvedor</dd>
                 </dl>
+                <button>
+                    <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
+                </button>
                 <button><!--botoes-->
                     <a href="https://github.com/Nerd0000" target="_blank">Github</a>
                 </button>
                 <button>
-                    <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
+                    <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840" target="_blank">Uri Online Judge</a>
                 </button>
                 <button>
                     <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&sort=likes&view_mode=default" target="_blank">Tinkercad</a>
