Mudado descrição para cor branca

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: aliceblue;
         }
         .texto{
-            color: lightblue;
+            color: white;
         }
         </style>
     </head>
