Adicionado nova característica

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <!--O que faço no cargo-->
                     <dd>Programador</dd>
                     <dd>Desenvolvedor</dd>
+                    <dd>Desenhista nas horas vagas</dd>
                 </dl>
                 <button>
                     <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
