--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <style>
         body{
-            background-image: url(img/kirito.jpg);
+            background-color:black;
         }
         .eu{
             border: 3px solid black;
