--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             background-color:black;
         }
         .eu{
-            border: 3px solid black;
+            border: 3px solid grey;
             width: 150px;
             height: 200px;
         }
