--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
     <head>
         <title>Alan C.</title>
         <meta charset="UTF-8">
-        <style>
-        body{
-            background-color:black;
-        }
-        .eu{
-            border: 3px solid grey;
-            width: 150px;
-            height: 200px;
-        }
-        h1{
-            color: aliceblue;
-        }
-        .texto{
-            color: white;
-        }
-        </style>
+        <link href="index.css" rel="stylesheet "><!--estilos-->
     </head>
     <body>
-        <h1>Currículo</h1><!--titulo-->
+        <h1 class="texto">Currículo</h1><!--titulo-->
             <img class="eu" src="img\eu.jpg"><!--foto-->
             <br>
             <div class="texto">
@@ -31,21 +16,30 @@
                     <dt> Estudante de T.I.</dt> <!--Meu Cargo-->
                     <!--O que faço no cargo-->
                     <dd>Programador</dd>
-                    <dd>Desenvolvedor</dd>
+                    <dd>Desenvolvedor de software</dd>
+                    <dd>Estudante de robótica</dd>
                     <dd>Desenhista nas horas vagas</dd>
                 </dl>
+                <footer>
+                <!--botoes-->
                 <button>
                     <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
-                </button>
-                <button><!--botoes-->
-                    <a href="https://github.com/Nerd0000" target="_blank">Github</a>
-                </button>
-                <button>
-                    <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840" target="_blank">Uri Online Judge</a>
                 </button>
                 <button>
                     <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&sort=likes&view_mode=default" target="_blank">Tinkercad</a>
                 </button>
-        </div>
+                <button>
+                    <a href="https://github.com/Nerd0000" target="_blank">Github</a>
+                </button>
+                <p></p><!--quebra a linha com espaço-->
+
+                <button>
+                    <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840" target="_blank">Uri Online Judge</a>
+                </button>
+                <button>
+                    <a href="https://sketch.sonymobile.com/u/Nerd0000" target="_blank">Sketch</a>
+                </button>
+                </footer>
+             </div>
     </body>
 </html>
