Adição de ícone a janela do navegador

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Alan C.</title>
+	<link rel="shortcut icon" href="img/eu.ico" type="image/x-icon"/> <!--Icone da aba-->
+        <title>Alan C.</title> <!--Titulo da aba-->
         <meta charset="UTF-8"> <!--Define padrão de linguagem portugues-->
         <meta name="viewport" content="width=device-width"> <!--adaptar a largura do dispositivo-->
         <link href="index.css" rel="stylesheet "> <!--estilos-->
