melhor semantica no html, novo botão "youtube"

--- a/index.html
+++ b/index.html
@@ -1,62 +1,77 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<link rel="shortcut icon" href="img/eu.ico" type="image/x-icon"/> <!--Icone da aba-->
-        <title>Alan C.</title> <!--Titulo da aba-->
-        <meta charset="UTF-8"> <!--Define padrão de linguagem portugues-->
-        <meta name="viewport" content="width=device-width"> <!--adaptar a largura do dispositivo-->
-        <link href="index.css" rel="stylesheet "> <!--estilos-->
-    </head>
 
-    <body>
-        <header class="cabecalho">
-         <h1>Currículo</h1> <!--titulo-->
-        </header>
-				
-        <article><!--foto-->
+<head>
+    <link rel="shortcut icon" href="img/eu.ico" type="image/x-icon" />
+    <!--Icone da aba-->
+    <title>Alan Ch.</title>
+    <!--Titulo da aba-->
+    <meta charset="UTF-8">
+    <!--Define padrão de linguagem portugues-->
+    <meta name="viewport" content="width=device-width">
+    <!--adaptar a largura do dispositivo-->
+    <link href="index.css" rel="stylesheet ">
+    <!--estilos-->
+</head>
+
+<body>
+    <header class="cabecalho">
+        <h1>Currículo</h1>
+        <!--titulo-->
+    </header>
+
+    <article>
+        <!--foto-->
         <img class="eu" src="img\eu.jpg">
-        </article>
+    </article>
 
-        <section class="texto">
-            <p>Nome: Alan Christian Amaral Santana</p>
-            <p>Data de nascimento: 27/09/2000</p>
-            <dl> <!--lista de associação-->
-                <dt> Estudante de T.I.</dt> <!--Meu Cargo-->
-                <!--O que faço no cargo-->
-                <dd>Programador</dd>
-                <dd>Desenvolvedor de software</dd>
-                <dd>Estudante de robótica</dd>
-                <dd>Desenhista nas horas vagas</dd>
-            </dl>
-        </section>
+    <main>
+        <p>Nome: Alan Christian Amaral Santana</p>
+        <p>Data de nascimento: 27/09/2000</p>
+        <dl>
+            <!--lista de associação-->
+            <dt> Estudante de T.I.</dt>
+            <!--Meu Cargo-->
+            <!--O que faço no cargo-->
+            <dd>Programador</dd>
+            <dd>Desenvolvedor de software</dd>
+            <dd>Estudante de robótica</dd>
+            <dd>Desenhista nas horas vagas</dd>
+        </dl>
+    </main>
 
-        <section class="botoes">
-            <button>
-                <a href="https://www.linkedin.com/in/alanchristian0/"
-                target="_blank">Linkedin</a>
-            </button>
+    <section class="botoes">
+        <button>
+            <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
+        </button>
 
-            <button>
-                <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&sort=likes&view_mode=default"
+        <button>
+            <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&sort=likes&view_mode=default"
                 target="_blank">Tinkercad</a>
-            </button>
+        </button>
 
-            <button>
-                <a href="https://github.com/Nerd0000"
-                target="_blank">Github</a>
-            </button>
+        <button>
+            <a href="https://github.com/Nerd0000" target="_blank">Github</a>
+        </button>
 
-        <p></p><!--quebra a linha com espaço-->
+        <p></p>
+        <!--quebra a linha com espaço-->
 
-            <button>
-                <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840"
-                target="_blank">Uri Online Judge</a>
-            </button>
+        <button>
+            <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840" target="_blank">Uri Online Judge</a>
+        </button>
 
-            <button>
-                <a href="https://sketch.sonymobile.com/u/Nerd0000"
-                target="_blank">Sketch</a>
-            </button>
-		</section>
-    </body>
+        <button>
+            <a href="https://sketch.sonymobile.com/u/Nerd0000" target="_blank">Sketch</a>
+        </button>
+
+        <p></p>
+        <!--quebra a linha com espaço-->
+
+        <button>
+            <a href="https://www.youtube.com/channel/UCVaB0AN9uZ0TfDvh8hyhq6A" target="_blank">Youtube</a>
+        </button>
+    </section>
+</body>
+
 </html>
