--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <link rel="shortcut icon" href="img/eu.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/eu.ico" type="image/x-icon">
     <!--Icone da aba-->
     <title>Alan Ch.</title>
     <!--Titulo da aba-->
@@ -38,40 +37,37 @@
             <dd>Estudante de robótica</dd>
             <dd>Desenhista nas horas vagas</dd>
         </dl>
+    	
     </main>
 
     <section class="botoes">
-        <button>
+        <label>Contato: </label><button>
             <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
-        </button>
+    </button><p></p>
 
-        <button>
-            <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&sort=likes&view_mode=default"
-                target="_blank">Tinkercad</a>
+        <label>Portfólios: </label><button>
+            <a href="https://www.tinkercad.com/users/7kbRcmKM7hu-nerd0000?category=circuits&amp;sort=likes&amp;view_mode=default" target="_blank">Tinkercad</a>
         </button>
 
         <button>
             <a href="https://github.com/Nerd0000" target="_blank">Github</a>
         </button>
 
-        <p></p>
-        <!--quebra a linha com espaço-->
+        <p></p><!--quebra a linha com espaço-->
 
         <button>
             <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840" target="_blank">Uri Online Judge</a>
         </button>
-
+		
+        
         <button>
             <a href="https://sketch.sonymobile.com/u/Nerd0000" target="_blank">Sketch</a>
         </button>
 
-        <p></p>
-        <!--quebra a linha com espaço-->
 
         <button>
             <a href="https://www.youtube.com/channel/UCVaB0AN9uZ0TfDvh8hyhq6A" target="_blank">Youtube</a>
         </button>
     </section>
 </body>
-
-</html>
+</html> 
