--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
             <!--descrição-->
             <dd>Programador</dd>
             <dd>Desenvolvedor de software</dd>
-        </dl>
-    	<p>Objetivo:</p>
-	<p>Trabalhar com desenvolvimento de sistemas em nivel de aprendizagem</p>
-	<p>ou auxílio administrativo</p>
-    	<p>Interesses:</p>
-	<p>Desenvolvimento Fullstack com NodeJs, ReactJs e React Native</p>
+        </dl>	  
+	    
+	<dl>
+    	<dt>Objetivo:</dt>
+	<dd>Trabalhar com desenvolvimento de sistemas em nivel de aprendizagem</dd>
+	<dd>ou auxílio administrativo</dd>
+	</dl>
+	
+	<dl>
+    	<dd>Interesses:</dd>
+	<dd>Desenvolvimento Fullstack com NodeJs, ReactJs e React Native</dd>
+	</dl>
     </main>
 
     <section class="botoes">
