Finalização mudanças visuais

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </dl>	  
 	    
 	<dl>
-    	<dt>Objetivo:</dt>
+    	<dt>Objetivo</dt>
 	<dd>Trabalhar com desenvolvimento de sistemas em nivel de aprendizagem</dd>
 	<dd>ou auxílio administrativo</dd>
 	</dl>
 	
 	<dl>
-    	<dd>Interesses:</dd>
+    	<dt>Interesses</dt>
 	<dd>Desenvolvimento Fullstack com NodeJs, ReactJs e React Native</dd>
 	</dl>
     </main>
