--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
         <p>Data de nascimento: 27/09/2000</p>
         <dl>
             <!--lista de associação-->
-            <dt> Estudante de T.I.</dt>
+            <dt>Sobre</dt>
             <!--descrição-->
+	    <dd>Cursando faculdade de sistemas de informação</dd>
             <dd>Programador</dd>
             <dd>Desenvolvedor de software</dd>
         </dl>	  
 	    
 	<dl>
     	<dt>Objetivo</dt>
-	<dd>Trabalhar com desenvolvimento de sistemas em nivel de aprendizagem</dd>
+	<dd>Trabalhar com desenvolvimento de sistemas em nível de aprendizagem</dd>
 	<dd>ou auxílio administrativo</dd>
 	</dl>
 	
