Muda cabeçalho: Currículo -> Quem sou eu?

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="cabecalho">
 	<!--titulo-->
-        <h1>Currículo</h1>
+        <h1>Quem sou eu?</h1>
     </header>
 
     <article>
