--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 	    
 	<dl>
     	<dt>Objetivo</dt>
-	<dd>Trabalhar com desenvolvimento de sistemas em nível de aprendizagem</dd>
-	<dd>ou auxílio administrativo</dd>
+	<dd>Trabalhar com desenvolvimento de sistemas</dd>
 	</dl>
 	
 	<dl>
