--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 	
 	<dl>
     	<dt>Interesses</dt>
-	<dd>Desenvolvimento Fullstack com NodeJs, ReactJs e React Native</dd>
+	<dd>Desenvolvimento Fullstack</dd>
+	<dd>Robótica</dd>
 	</dl>
     </main>
 
