adiciona interesse, rearranjo das informações

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <dt>Sobre</dt>
             <!--descrição-->
 	    <dd>Cursando faculdade de sistemas de informação</dd>
-            <dd>Programador</dd>
             <dd>Desenvolvedor de software</dd>
+	    <dd>Programador</dd>
         </dl>	  
 	    
 	<dl>
@@ -44,6 +44,7 @@
 	<dl>
     	<dt>Interesses</dt>
 	<dd>Desenvolvimento Fullstack</dd>
+	<dd>Segurança da Informação</dd>
 	<dd>Robótica</dd>
 	</dl>
     </main>
