adiciona link do CodersRank

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 	    
         <button>
             <a href="https://www.linkedin.com/in/alanchristian0/" target="_blank">Linkedin</a>
+        </button>
+
+        <button>
+            <a href="https://profile.codersrank.io/user/nerd0000/" target="_blank">CodersRank</a>
         </button><p></p>
 
         <label>Portfólios: </label><p></p>
