Atualiza ícones sociais

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
                         <a href="https://github.com/Nerd0000">
                             <i class="fab fa-github" style="color:white;"></i>
                         </a>
-                    </div>
-                    <div class="urionlinejudge">
                         <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840">
-                            <button>UriOnlineJudge</button>
+                            <i id="trophy" class="fas fa-trophy" style="color:white;"></i>
                         </a>
                     </div>
                 </div>
