Arrumando bugs de responsividade

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="responsive-design.css" rel="stylesheet" />
     <!-- Icones FontAwesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 </head>
 
 <body>
@@ -36,18 +37,18 @@
 
                     <div class="icones-social">
                         <a href="https://www.linkedin.com/in/alanchristian0/">
-                            <i class="fab fa-linkedin" style="color:white;"></i>
+                            <span class="iconify" data-inline="false" data-icon="ant-design:linkedin-filled" style="color: #fff; font-size: 95px;"></span>
                         </a>
 
                         <a href="https://profile.codersrank.io/user/nerd0000/">
-                            <img src="img/icones/codersrank.svg" alt="codersrank">
+                            <span class="iconify" data-inline="false" data-icon="simple-icons:codersrank" style=" color:#fff;font-size: 95px;"></span>
                         </a>
 
                         <a href="https://github.com/Nerd0000">
-                            <i class="fab fa-github" style="color:white;"></i>
+                            <span class="iconify" data-inline="false" data-icon="ant-design:github-filled" style="color: #fff; font-size: 95px;"></span>
                         </a>
                         <a href="https://www.urionlinejudge.com.br/judge/pt/profile/234840">
-                            <i id="trophy" class="fas fa-trophy" style="color:white;"></i>
+                            <span class="iconify" data-inline="false" data-icon="ant-design:trophy-filled" style="color: #fff; font-size: 95px;"></span>
                         </a>
                     </div>
                 </div>
@@ -76,9 +77,9 @@
                         <p>Interesse</p>
                     </div>
                     <p class="interesses">
-                        Desenvolvimento Fullstack<br />
-                        Segurança da Informação<br />
-                        Robótica
+                        Desenvolvimento Fullstack.<br />
+                        Segurança da Informação.<br />
+                        Robótica.
                     </p>
                 </li>
             </ul>
